Ajustes nas apis de organization
